# spread

./: config.py  pyproject.toml
src/: broadcaster.py  main.py  models.py  receiver.py  schema.py  stream.py  util.py
static/: index.html
